# trade_ideas

./: .gitignore  CLAUDE.md  README.md  environment.yaml  pyproject.toml  setup.md
.claude/: session-start.sh  settings.json  settings.local.json
config/: backtest.yaml  execution.yaml  portfolio.yaml  production.yaml  universe.yaml
config/factors/: in_house.yaml  ken_french.yaml
config/features/mean_reversion/: model_mr_crosssec.yaml  model_mr_pairs.yaml  model_mr_zscore.yaml  model_mr_zscore_12feat.yaml
config/models/: ensemble.yaml  lightgbm.yaml  ridge.yaml
config/regime/: detector.yaml
docs/design/: trading_plan.md
memory/: MEMORY.md  feedback_git_commit_message.md  feedback_git_commits.md
production/: daily_run.py  portfolio_state.py  retrain.py
scripts/: download_sec_fundamentals.py  download_yfinance_data.py  fama_macbeth_analysis.py  show_results_table.py
src/trading_system/: cli.py
src/trading_system/backtest/: analytics.py
src/trading_system/data/: loaders.py  synthetic.py  yfinance_loader.py
src/trading_system/factors/: ken_french.py  momentum.py  rolling_betas.py  sec_fundamentals.py
src/trading_system/features/: base.py  builder.py  cross_sectional_reversal.py  market_context.py  mean_reversion.py  price_momentum.py  transforms.py  volume_volatility.py
src/trading_system/labels/: builder.py
src/trading_system/models/: lightgbm_model.py  ridge.py  trainer.py
src/trading_system/portfolio/: constructor.py  optimizer.py
src/trading_system/regime/: detector.py  filters.py
tests/integration/: test_pipeline_mean_reversion.py
(+14 files in other folders)
