[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_system"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0", "numpy>=1.24.0", "scipy>=1.10.0",
    "scikit-learn>=1.3.0", "lightgbm>=4.0.0",
    "pyarrow>=12.0.0", "statsmodels>=0.14.0",
    "matplotlib>=3.7.0", "seaborn>=0.12.0",
    "pyyaml>=6.0", "tqdm>=4.65.0",
    "python-dateutil>=2.8.2", "pytz>=2023.3",
    "yfinance>=0.2.0", "pandas-datareader>=0.10.0",
    "cvxpy>=1.3.0", "requests>=2.28.0",
]

[project.scripts]
trading-system = "trading_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
